# simple-multimodal-rag-application

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  milvus_integration.py  pyproject.toml  run_api.py  start_api.py
.github/workflows/: README.md  ci.yml  multimodal-rag-tests.yml  pr-tests.yml  test.yml
api/: API_README.md  __init__.py  client_example.py  config.py  main.py
docs/: MILVUS_INTEGRATION.md
notebooks/: data-enrichment.ipynb  docling-basic.ipynb  docling-enrichment.ipynb  docling-hybrid-chunkning.ipynb  docling-ocr.ipynb  docling-picture-annotate.ipynb  docling-serialization.ipynb  milvus.ipynb
openwebui/: OPENWEBUI_INTEGRATION.md  OPENWEBUI_QUICKSTART.md  deploy_openwebui.py  openwebui_config.yaml  openwebui_pipeline.py
openwebui/test/: test_openwebui_pipeline.py
postman/: Multimodal_RAG_API.postman_collection.json  Multimodal_RAG_API.postman_environment.json  run_tests.ps1
src/: DoclingPDFProcessor.py  MilvusManager.py  index.py
src/agent/: README.md  __init__.py  multimodal_rag_agent.py
src/utilities/: config_loader.py
test/: temp_config.yaml  test_api.py  test_config_loadet.py  test_index.py  test_milvus_manager.py  test_multimodal_rag_agent.py  test_processor.py  test_processor_with_database.py
