[project]
name = "simple-multimodal-rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.53.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-docling>=1.1.0",
    "pymilvus[milvus-lite,model]>=2.6.2",
    "pytest>=8.4.2",
    "pyyaml>=6.0.2",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]
